re PR target/26607 (Illegal inlined assembler on config/rs6000/darwin-ldouble.c)

PR target/26607
	* config/rs6000/darwin-ldouble.c: Don't compile when __NO_FPRS__
	or __LITTLE_ENDIAN__.

From-SVN: r112335